--- a/sass/modules/team/_team-member.scss
+++ b/sass/modules/team/_team-member.scss
@@ -110,7 +110,7 @@
     a {
       color: $white;
       i {
-        font-size: 24px;
+        font-size: 28px;
         color: $white;
       }
       &:hover {
