--- a/sass/modules/testimonial-card/_testimonial-card.scss
+++ b/sass/modules/testimonial-card/_testimonial-card.scss
@@ -9,6 +9,7 @@
     justify-content: center;
     gap: 10px;
     i {
+      font-size: 35px;
       color: $yellow;
     }
   }
