--- a/sass/pages/_home-one.scss
+++ b/sass/pages/_home-one.scss
@@ -477,7 +477,7 @@
   .shape-wrapper {
     background-color: #f8f5f0;
     position: absolute;
-    bottom: 87px;
+    bottom: 120px;
     right: 0;
     width: 1645px;
     height: 823px;
@@ -523,7 +523,7 @@
     }
   }
   .booking-form {
-    padding: 55px 45px;
+    padding: 65px 45px;
     background-color: #fff;
     box-shadow: 0px 4px 20px 0px rgba(234, 234, 234, 0.3);
     border-radius: 10px;
@@ -563,7 +563,7 @@
           width: 100%;
           padding: 12px;
           font-size: 14px;
-          border: 1px solid #f2e2e2;
+          border: 1px solid transparent;
           border-radius: 5px;
           background-color: #f6f6f6;
           color: $text-color;
@@ -633,6 +633,14 @@
 // Room and suites
 .room_and_suites {
   background-color: #f8f5f0;
+  .banner-text {
+    margin-top: -40px;
+  }
+  .section-title {
+    // margin-bottom: 60px !important;
+    .title {
+    }
+  }
   .room-card-slider-container {
     position: relative;
   }
@@ -805,7 +813,7 @@
     max-width: 1160px;
     width: 100%;
     margin: 0 auto;
-    margin-top: -96px;
+    margin-top: -90px;
     overflow: hidden;
     @include rmaxwd(1699) {
       margin-top: -60px;
@@ -985,6 +993,12 @@
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
+      .shape {
+        position: absolute;
+        top: 0;
+        right: 0;
+        z-index: 2;
+      }
     }
     .overlay {
       position: absolute;
@@ -1031,6 +1045,7 @@
           span {
             visibility: visible;
             opacity: 1;
+            transform: rotate(-90deg);
             @include transition;
           }
         }
