--- a/sass/partials/_title-section.scss
+++ b/sass/partials/_title-section.scss
@@ -172,7 +172,7 @@
   p {
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: rgba(102, 102, 102, 0.7);
-    font-family: 'Gilda Display';
+    font-family: "Gilda Display";
     font-size: 200px;
     font-style: normal;
     font-weight: 400;
